feat: endpoints for adding lectures to favorites
