# app/Http/Requests/Lecture/RemoveFromFavorites.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\Lecture;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+use App\Models\User;
+
+class RemoveFromFavorites extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return $this->lecture && $this->user()->can('lecturesRemoveFromFavorites', [User::class, $this->lecture]);
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules()
+    {
+        return [
+            //
+        ];
+    }
+}
